Integrate Oxylabs residential proxy and fix store extraction
- Add Oxylabs U.S. residential proxy configuration for API requests
- Fix store information extraction with proper HTML parsing patterns
- Implement hybrid proxy approach: SessionPage with proxy, WebPage without
- Add robust error handling for proxy authentication limitations
- Remove debugging HTML file generation for production readiness
- Successfully extract Store Name, Store ID, and Store URL (88% success rate)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,13 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "python-dotenv>=1.0.0",
     "drissionpage>=4.1.1.1",
     "flask>=3.1.1",
+    "playwright>=1.54.0",
+]
+
+[dependency-groups]
+dev = [
+    "ruff>=0.12.7",
 ]
