--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,9 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "python-dotenv>=1.0.0",
-    "drissionpage>=4.1.1.1",
     "flask>=3.1.1",
     "playwright>=1.54.0",
+    "requests>=2.32.0",
 ]
 
 [dependency-groups]
