--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "flask>=3.1.1",
     "playwright>=1.54.0",
     "requests>=2.32.0",
+    "python-aliexpress-api>=3.1.0",
 ]
 
 [dependency-groups]
