--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "playwright>=1.54.0",
     "requests>=2.32.0",
     "python-aliexpress-api>=3.1.0",
+    "pandas>=2.3.1",
 ]
 
 [dependency-groups]
